# layup-parser

./: .gitignore  README.md  pyproject.toml
.claude/skills/implement/: SKILL.md
.claude/skills/init/: SKILL.md
.claude/skills/plan/: SKILL.md
.claude/todo/: task-1-cross-module-edges.md  task-2-usage-edge-model.md  task-3-usage-resolver.md  task-4-emitter-wiring.md  task-5-architecture-docs.md
.pi/todo/: 01-schema-version-and-nodetype-record.md  02-rewrite-emitter-for-new-schema.md  03-update-emitter-tests.md
docs/: ARCHITECTURE.md
layup_parser/: __init__.py  _schema_path.py  cli.py  models.py  relationships.py  usage.py
layup_parser/emitter/: layup.py
layup_parser/layout/: hierarchical.py
layup_parser/parser/: __init__.py  base.py  extractor.py  walker.py
layup_parser/parser/python/: __init__.py  extractor.py  parser.py  walker.py
layup_python/: __init__.py  _schema_path.py  cli.py  models.py  relationships.py
layup_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
layup_python/emitter/: layup.py
layup_python/layout/: hierarchical.py
layup_python/parser/: __init__.py  base.py  extractor.py  walker.py
layup_python/parser/python/: __init__.py  extractor.py  parser.py  walker.py
schema/: README.md  diagram.schema.json  nodeSubtree.schema.json
tests/: test_api.py  test_cli.py  test_emitter.py  test_extractor.py  test_layout.py  test_models.py  test_parser_registry.py  test_relationships.py  test_usage.py  test_walker.py
tests/fixtures/sample_pkg/: __init__.py  animals.py
(+4 files in other folders)
