[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layup-python"
version = "0.1.0"
description = "Parse Python packages and export their structure as Layup diagram JSON"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "click>=8.0",
    "jsonschema>=4.0",
]

[project.scripts]
layup-parse = "layup_python.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["layup_python*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
