[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layup-parser"
version = "0.1.0"
description = "Parse Python packages and export their structure as Layup diagram JSON"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "click>=8.0",
    "jsonschema>=4.0",
]

[project.scripts]
layup-parse = "layup_parser.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["layup_parser*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
